--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,3 +1,40 @@
-<p>
-  admin-products works!
-</p>
+<div class="row mb-md-3">
+  <div class="col-md-6">
+    <a routerLink="/admin/products/new" class="btn btn-primary">Add new Product</a>
+  </div>
+  <div class="col-md-5">
+      <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="search...">
+  </div>
+</div>
+<div class="col-md-12">
+  <data-table
+  [items]="items"
+  [itemCount]="itemCount"
+  (reload)="reloadItems($event)">
+
+    <data-table-column
+    [property]="'title'"
+    [header]="'Title'"
+    [sortable]="true"
+    [resizable]="true">
+    </data-table-column>
+
+    <data-table-column
+    [property]="'price'"
+    [header]="'Price'"
+    [sortable]="true"
+    [resizable]="true">
+      <ng-template #dataTableCell let-item="item">
+        {{item.price | currency:'USD':true}}
+      </ng-template>
+    </data-table-column>
+
+    <data-table-column
+    [property]="'$key'">
+      <ng-template #dataTableCell let-item="item">
+        <a [routerLink]="['/admin/products', item.$key]">Edit</a>
+      </ng-template>
+    </data-table-column>
+
+  </data-table>
+</div>
