--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -49,13 +49,7 @@
     </form>
   </div>
   <div class="col-md-6">
-    <div class="card" style="width: 20rem;">
-      <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
-      <div class="card-body">
-        <h4 class="card-title">{{product.title}}</h4>
-        <p class="card-text">{{product.price | currency:'USD':true}}</p>
-      </div>
-    </div>
+   <app-product-card [product]="product" [showActions]="false"></app-product-card>
   </div>
 </div>
 
