--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,24 @@
-<p>
-  products works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2">
+      <div class="input-group search">
+        <input #query
+        (keyup)="search(query)" type="text" class="form-control" placeholder="search..">
+      </div>
+      <app-filter
+      [activeCategory]="activeCategory"> </app-filter>
+    </div>
+
+    <div class="row col">
+      <ng-container *ngFor="let product of filteredProducts; let i = index">
+        <div class="col">
+          <app-product-card [product]="product">
+          </app-product-card>
+        </div>
+        <div class="w-100" *ngIf="(i + 1) % 3 === 0"></div>
+      </ng-container>
+    </div>
+  </div>
+
+</div>
+
